[package]
name = "rskiller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rskiller"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
dirs = "6.0.0"
walkdir = "2.3"
colored = "3.0.0"
humansize = "2.1"
indicatif = "0.17"
serde_json = "1.0"
ratatui = "0.20.1"
tui-popup = "0.6.0"
crossterm = "0.29.0"
tui-big-text = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
spinoff = { version = "0.7.0", features = ["dots"] }

[dev-dependencies]
tempfile = "3.0"
